# feecc-cameraman

./: .flake8  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: Deploy-master-DO.yml  release.yml
docs/: README.md
src/: app.py  logging_config.py
src/auth/: Singleton.py  database.py  dependencies.py  models.py
src/feecc_cameraman/: camera.py  dependencies.py  models.py  utils.py
tests/: test_base.py  test_video.py
