[tool.poetry]
name = "feecc-cameraman"
version = "1.0.0"
description = "A camera and recording manager for Feecc QA system"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
fastapi = "^0.74.1"
motor = "^2.5.1"
dnspython = "^2.2.0"
requests = "^2.27.1"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "test*"
strict = true
ignore_missing_imports  = true

[tool.black]
line-length = 120

[tool.flake8]
count = true
exit_zero = true
max_line_length = 150
exclude = [".venv", "docs", "tests"]
